[tool.poetry]
name = "question-avoidance"
version = "0.1.0"
description = ""
authors = ["i-be-snek <sjzahra@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.11,>=3.9"
tensorflow = {extras = ["and-cuda"], version = "^2.14.0"}
numpy = "^1.26.1"
pandas = "^2.1.3"
ipykernel = "^6.26.0"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
pyarrow = "13"
transformers = {extras = ["sentencepiece"], version = "^4.35.0"}
datasets = "^2.14.6"
mlflow = "^2.8.0"
numba = "^0.58.1"
evaluate = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
